Refactor API Gateway to support dynamic routing and load balancing
- Updated .gitignore to include temporary files
- Enhanced README.md with detailed features, prerequisites, and usage instructions for the reactive API Gateway
- Modified build.gradle to include Spring Cloud dependencies for Gateway and LoadBalancer
- Refactored ApiGatewayApplication to remove unused virtual thread configuration
- Updated ServiceRegistryController to use reactive programming with Mono and Flux
- Added ServiceStatus enum to manage service instance statuses
- Implemented InMemoryServiceRegistryRepository to handle service registration and status updates
- Created GatewayConfig for dynamic route creation based on registered services
- Developed LoadBalancerConfig to supply service instances to the LoadBalancer
- Added tests for ServiceRegistryController and InMemoryServiceRegistryRepository to ensure functionality
- Created service_a.py and service_b.py scripts to simulate backend services for testing
- Implemented GatewayConfigTest to validate dynamic routing behavior